# floatbungler

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  REUSE.toml  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  cliff.toml  pyproject.toml
.github/workflows/: CI.yml  bench.yml
bench/: compression_ratio.py  conftest.py  test_bench.py
dev/bench/: data.js
python/floatbungler/: __init__.py  gorilla.pyi  patas.pyi
scripts/: bench_geomean.py  release.sh
src/: bit_utils.rs  bits.rs  chimp.rs  chimp128.rs  chimp_utils.rs  gorilla.rs  lib.rs  patas.rs
test/: __init__.py  test_chimp.py  test_chimp128.py  test_gorilla.py  test_patas.py  vector_cases.py
