[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "floatbungler"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.uv]
# Found from here: https://github.com/PyO3/maturin/issues/2314#issue-2675634348
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}, {file = "floatbungler/*"}]
#package = false

[dependency-groups]
dev = [
    "hypothesis>=6.113.0",
#    "maturin-import-hook>=0.3.0",
    "pytest>=8.3.5",
]
