# SPDX-FileCopyrightText: 2025 Miikka Koskinen
#
# SPDX-License-Identifier: ISC

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "floatbungler"
requires-python = ">=3.10"
description = "Compression algorithms for floating-point time series data"
readme = "README.md"
license = "ISC"
license-files = ["LICENSES/*"]
keywords = ["compression", "time-series", "float64", "gorilla", "chimp", "patas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Archiving :: Compression",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/miikka/floatbungler"
Issues = "https://github.com/miikka/floatbungler/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.uv]
# Found from here: https://github.com/PyO3/maturin/issues/2314#issue-2675634348
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}, {file = "floatbungler/*"}]
#package = false

[dependency-groups]
dev = [
    "hypothesis>=6.113.0",
    #    "maturin-import-hook>=0.3.0",
    "maturin-import-hook>=0.3.0",
    "numpy>=2.2.6",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.2.3",
]

[tool.pytest.ini_options]
addopts = "--benchmark-disable"
